# electronic-chess

./: .gitignore  CMakeLists.txt  README.md  README.txt  REPORT.md  apply_xadrez_game_state_refactor.py  partitions.csv  sdkconfig  sdkconfig.defaults
Xadrez2/: sdkconfig.old
Xadrez2/main/: led.c  sensor.c  server.c  valida_jogada.cpp
files/main/: CMakeLists.txt  app_types.h  chess_engine.c  led.c  led_map_generated.h  server.c
main/: CMakeLists.txt  app_types.h  chess_engine.c  chess_logic.h  led.c  led.h  led_map.json  led_map_generated.h  led_map_mode.c  main.c  sensor.c  sensor.h  server.c  server.h  valida_jogada.cpp
main/include/: chess_engine.h  chess_logic.h  credentials.h  led.h  runtime_config.h
main/src/app/: runtime_config.c
main/src/chess/: chess_engine.c  chess_logic.c
main/src/drivers/: led.c  sensor.c
main/src/game/: server.c
main/src/net/: credentials.c  stockfish_client.c
scripts/: install-run-command.sh  map_leds.py  parse_led_map.py  run-chess.sh  run-map.sh
tools/: parse_led_map.c
