if("$ENV{XADREZ_MAP_MODE}" STREQUAL "1")
    idf_component_register(
        SRCS
            "src/tools/led_map_mode.c"
        INCLUDE_DIRS
            "include"
            "."
        PRIV_REQUIRES
            led_strip
            esp_driver_usb_serial_jtag
    )
else()
    idf_component_register(
        SRCS
            "src/app/main.c"
            "src/drivers/led.c"
            "src/drivers/sensor.c"
            "src/game/server.c"
            "src/net/credentials.c"
            "src/chess/chess_logic.c"
            "src/chess/chess_engine.c"
        INCLUDE_DIRS
            "include"
            "."
        PRIV_REQUIRES
            led_strip
            esp_driver_gpio
            esp_http_server
            esp_wifi
            esp_event
            esp_netif
            nvs_flash
            wpa_supplicant
    )
endif()
